[project]
name = "content-moderation-env"
version = "0.1.0"
description = "Real-world content moderation environment for training AI agents to apply community guidelines"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "praneeth", email = "praneeth@local.dev" }
]

dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "openenv>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_mod_env"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
